--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@
    color: #fff;
    font-size: 14px;
 }
-.cont-principal img{
+.data img{
    height: 30px;
    padding: 5px;
 }
@@ -88,4 +88,12 @@
    border-radius: 20px;
    padding-left: 10px;
    background-color: #fff;
+}
+.buscador-nav input {
+   outline: none;
+   border: none;
+   padding-left: 10px;
+}
+.buscador-nav img{
+   padding-right: 10px;
 }
