Subida del archivo slider.png para la integracion del slider

--- a/css/style.css
+++ b/css/style.css
@@ -97,3 +97,12 @@
 .buscador-nav img{
    padding-right: 10px;
 }
+
+
+/* Secion del main */
+
+/* Section del slides de imagenes  */
+.contain-slider img{
+   width: 100%;
+   
+}
