--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@
 /* Section del slides de imagenes  */
 .contain-slider img{
    width: 100%;
+   position: relative;
 }
 
 
@@ -112,7 +113,8 @@
    border-radius: 4px;
    border: 1px solid #D7D8D9;
    padding: 30px;
-
+   position: relative;
+   top: -90px;
 }
 .contain-busqueda .contain-buscar{
    display: flex;
@@ -132,8 +134,53 @@
    width: 780px;
    height: 35px;
    border: none;
+   outline: none;
 }
 .contain-buscar img{
    height: 20px;
    padding-right: 10px;
+}
+
+/* 
+cards documentacion
+*/
+
+.contai-documentation{
+   display: flex;
+   justify-content: space-between;
+}
+.contai-documentation .card-doc{
+   display: flex;
+   border: 1px solid #1F4794;
+   border-radius: 4px;
+   align-items: center;
+   
+}
+.card-doc img{
+   margin: 20px 90px; 
+}
+.card-doc .subtitle{
+   width: 250px;
+   background-color: #1F4794;
+   border-radius: 0 4px 4px 0;
+   height: 100%;
+   align-items: center;
+   text-align: center;
+}
+.card-doc p{
+   color: #fff;
+   padding: 10px ;
+   line-height: 150px;
+}
+
+
+
+/*  
+contenedores de area
+*/
+.contain-area{
+   display: flex;
+}
+.card-area {
+   display: flex;
 }
