Seccion de areas tematicas terminadas

--- a/css/styles.principales.css
+++ b/css/styles.principales.css
@@ -1,7 +1,10 @@
 :root{
    --color-principal: #FDBE33;
 
+   --color-box: #1F4794;
    --color-text: #030F27;
+
+   --color-text-subtitle: #707070;
 }
 
 *{
