--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@
 /* Seccion del ruteador y el buscador */
 .contennt-metadata{
    height: 50px;
-   background-color: #1F4794;
+   background-color: var(--color-box);
 }
 .contennt-metadata .cont-principal{
    display: flex;
@@ -107,7 +107,9 @@
    position: relative;
 }
 
-
+/* 
+Secion de busqueda global
+*/
 .contain-busqueda{
    background-color: #F5F7FC;
    border-radius: 4px;
@@ -115,6 +117,9 @@
    padding: 30px;
    position: relative;
    top: -90px;
+}
+.contain-busqueda h3{
+   color: var(--color-text-subtitle);
 }
 .contain-busqueda .contain-buscar{
    display: flex;
@@ -152,7 +157,7 @@ cards documentacion
 }
 .contain-documentation .card-doc{
    display: flex;
-   border: 1px solid #1F4794;
+   border: 1px solid var(--color-box);
    border-radius: 4px;
    align-items: center;
    
@@ -162,7 +167,7 @@ cards documentacion
 }
 .card-doc .subtitle{
    width: 250px;
-   background-color: #1F4794;
+   background-color: var(--color-box);
    border-radius: 0 4px 4px 0;
    height: 100%;
    align-items: center;
@@ -180,8 +185,39 @@ cards documentacion
 contenedores de area
 */
 .contain-area{
+   padding: 30px 0;
+}
+.contain-area h3{
+   color: var(--color-text-subtitle);
+   padding: 30px;
+}
+.contain-area__areas{
    display: flex;
+   justify-content: space-between;
 }
 .card-area {
    display: flex;
+}
+.card-area img{
+   height: 130px;
+}
+.card-area div{
+   height: 100%;
+   width: 160px;
+   border-radius: 0 4px 4px 0;
+}
+.card-area .mdp{
+   background-color: #3270E6;
+   color: #fff;
+}
+.card-area .ci{
+   background-color: #FFE460;
+   color: var(--color-text)
+}
+.card-area .dpw{
+   background-color: #55F4B0;
+   color: var(--color-text)
+}
+.card-area p{
+   margin: 40px 10px;
 }
